# microbit-v2-tinybit

./: codal.json
source/: README.md  core.h  icore.h  main.cpp
source/animations/: angry_face_animation.h  animation_controller.h  animation_driver.h  frame_animation.h  heart_animation.h  no_animation.h  normal_face_animation.h  sad_face_animation.h  smile_animation.h  smile_face_animation.h  spinner_animation.h  talk_face_animation.h  yes_animation.h
source/controllers/: display_controller.h  headlights_controller.h  icommand_processor.h  icontroller.h  icore.h  idisplay_controller.h  iframe_animation.h  iheadlights_controller.h  imotors_controller.h  iqueue_controller.h  iusb_com_controller.h  motors_controller.h  queue_controller.h
source/headlights/: headlights_controller.h
source/language/: interpreter.cpp  interpreter.h  message_queue.h  messages.h  string_utils.h  tinybit_messages.h
source/mimi/: constants.h  icom_controller.cpp  icom_controller.h  icontroller.h  icore.cpp  icore.h  idisplay_controller.h  iheadlights_controller.h  ilanguage_controller.cpp  ilanguage_controller.h  imotors_controller.h  interpreter.h  iqueue_controller.h  message_queue.h  messages.h  queue_controller.h  string_utils.h
source/motors/: drive_controller.h
tests/: CMakeLists.txt  README.md  dummy_mocks.h  fake_mocks.h  main.cpp  message_mocks.h  run_tests.sh  test_command_processor.h  test_drive_motors_messages.h  test_headlight_messages.h  test_language_controller.h  test_message_queue.h  test_messages.h  test_string_utils.cpp  test_string_utils.h  tests.h
(+35 files in other folders)
